[package]
name = "biosample-rdf"
version = "0.1.0"
edition = "2021"
description = "Convert NCBI BioSample XML dumps to RDF (Turtle, JSON-LD, N-Triples)"

[dependencies]
quick-xml = "0.37"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
